# crewai-nps-analyzer

./: README.md  agents.yaml  crew.py  main.py  mock-nps-survey-data.csv  nps_analysis_objectives.md  pyproject.toml  report.md  tasks.yaml
