[tool.poetry]
name = "nps_analyzer"
version = "0.1.0"
description = "nps_analyzer using crewAI"
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = ">=3.10,<=3.13"
crewai = {extras = ["tools"], version = "^0.28.8"}

[tool.poetry.scripts]
nps_analyzer = "nps_analyzer.main:run"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"